--- a/clash_config.ini
+++ b/clash_config.ini
@@ -14,6 +14,7 @@
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
 ;ruleset=🚀 节点选择,https://raw.githubusercontent.com/qichiyuhub/rule/master/ProxyLite.list
 ;ruleset=🤖 AI,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
+ruleset=🚀 SUB,https://raw.githubusercontent.com/Tjl2357954871/clash_rule_privacy/main/sub.list
 ruleset=🤖 AI,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml
 ruleset=🤖 AI,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.yaml
 ruleset=🤖 AI,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.yaml
@@ -64,6 +65,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
 
 
+custom_proxy_group=🚀 SUB`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🐸 手动切换
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🐸 手动切换
