--- a/black_config.ini
+++ b/black_config.ini
@@ -20,6 +20,7 @@ ruleset=🤖 AI,clash-classic:https://mirror.ghproxy.com/https://raw.githubuserc
 ruleset=🎶 Spotify,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.yaml
 
 ruleset=🚀 节点选择,https://mirror.ghproxy.com/https://raw.githubusercontent.com/Tjl2357954871/clash_rule_privacy/main/sub.list
+ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Picacg/Picacg.yaml
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SystemOTA/SystemOTA.yaml
