--- a/black_config.ini
+++ b/black_config.ini
@@ -30,6 +30,7 @@ ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.g
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nvidia/Nvidia.yaml
 
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy_Classical.yaml
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
