--- a/clash_config.ini
+++ b/clash_config.ini
@@ -41,7 +41,7 @@ ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.g
 
 ;ruleset=🎯 全球直连,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Classical.yaml
 ;ruleset=🎯 全球直连,[]GEOSITE,CN
-;ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🎯 全球直连,[]GEOIP,CN
 
 ruleset=🐟 漏网之鱼,[]FINAL
 
