--- a/clash_config.ini
+++ b/clash_config.ini
@@ -33,6 +33,7 @@ ruleset=📹 YouTube,clash-classic:https://mirror.ghproxy.com/https://raw.github
 ruleset=🌍 国外媒体,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml
 ruleset=🌍 国外媒体,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml
 
+ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.yaml
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.yaml
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Adobe/Adobe.yaml
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nvidia/Nvidia.yaml
