--- a/white_config.ini
+++ b/white_config.ini
@@ -1,37 +1,65 @@
 [custom]
 
 ;规则集定义
+
+;本地局域网地址
 ruleset=🎯 全球直连,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml
+;不应该被去广告分流规则屏蔽的域名、IP
 ruleset=🎯 全球直连,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.yaml
 
+;游戏下载直连
 ruleset=🎯 全球直连,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/GameDownloadCN/GameDownloadCN.yaml
+;Steam直连
 ruleset=🎯 全球直连,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.yaml
+;抖音
 ruleset=🎯 全球直连,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.yaml
+;网易云音乐
 ruleset=🎯 全球直连,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
+;国内视频
 ruleset=🎯 全球直连,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.yaml
 
+;Gemini
 ruleset=🤖 AI,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml
+;Claude
 ruleset=🤖 AI,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.yaml
+;Anthropic
 ruleset=🤖 AI,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Anthropic/Anthropic.yaml
+;Copilot
 ruleset=🤖 AI,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.yaml
+;Bard
 ruleset=🤖 AI,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BardAI/BardAI.yaml
+;OpenAI
 ruleset=🤖 AI,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
 
+;Spotify
 ruleset=🎶 Spotify,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.yaml
 
+;个人
 ruleset=🚀 节点选择,https://mirror.ghproxy.com/https://raw.githubusercontent.com/Tjl2357954871/clash_rule_privacy/main/sub.list
+;测速
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.yaml
+;Github
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
+;Emby
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml
+;哔咔
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Picacg/Picacg.yaml
+;IOS升级
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SystemOTA/SystemOTA.yaml
+;Apple代理
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleProxy/AppleProxy.yaml
+;Steam代理
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.yaml
+;Adobe
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Adobe/Adobe.yaml
+;Nvidia
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nvidia/Nvidia.yaml
 
+;CN
 ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Classical.yaml
+;CNIP
 ruleset=🎯 全球直连,[]GEOIP,CN
+;FINAL
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
