--- a/black_config.ini
+++ b/black_config.ini
@@ -54,6 +54,8 @@ ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.g
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Adobe/Adobe.yaml
 ;Nvidia
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nvidia/Nvidia.yaml
+;开发
+ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
 
 ;GFW
 ruleset=🚀 节点选择,clash-classic:https://mirror.ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy_Classical.yaml
