--- a/black_config.ini
+++ b/black_config.ini
@@ -34,6 +34,9 @@ ruleset=🤖 AI,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_
 ;Spotify
 ruleset=🎶 Spotify,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Spotify/Spotify.yaml
 
+;Tiktok
+ruleset=🎶 Tiktok,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TikTok/TikTok.yaml
+
 ;个人
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/Tjl2357954871/clash_rule_privacy@main/sub.list
 ;测速
@@ -75,6 +78,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 
 custom_proxy_group=🤖 AI`select`[]♻️ 自动选择`[]🐸 手动切换`[]🎯 全球直连`[]🇭🇰 香港手动`[]🇯🇵 日本手动`[]🇸🇬 加坡手动`[]🇺🇲 美国手动`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 加坡自动`[]♻️ 美国自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 香港均衡`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡
 custom_proxy_group=🎶 Spotify`select`[]♻️ 自动选择`[]🐸 手动切换`[]🎯 全球直连`[]🇭🇰 香港手动`[]🇯🇵 日本手动`[]🇸🇬 加坡手动`[]🇺🇲 美国手动`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 加坡自动`[]♻️ 美国自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 香港均衡`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡
+custom_proxy_group=🎶 Tiktok`select`[]♻️ 自动选择`[]🐸 手动切换`[]🎯 全球直连`[]🇭🇰 香港手动`[]🇯🇵 日本手动`[]🇸🇬 加坡手动`[]🇺🇲 美国手动`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 加坡自动`[]♻️ 美国自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 香港均衡`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡
 custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择
 
 custom_proxy_group=🇭🇰 香港手动`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
