--- a/black_config.ini
+++ b/black_config.ini
@@ -72,7 +72,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT`[]🇭🇰 香港手动`[]🇯🇵 日本手动`[]🇸🇬 加坡手动`[]🇺🇲 美国手动`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 加坡自动`[]♻️ 美国自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 香港均衡`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡
 
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://1.1.1.1`300,,20
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.apple.com/library/test/success.html`300,,20
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 
@@ -86,20 +86,20 @@ custom_proxy_group=🇯🇵 日本手动`select`(日本|川日|东京|大阪|泉
 custom_proxy_group=🇸🇬 加坡手动`select`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=🇺🇲 美国手动`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 
-custom_proxy_group=♻️ 香港自动`url-test`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://1.1.1.1`300,,20
-custom_proxy_group=♻️ 日本自动`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://1.1.1.1`300,,20
-custom_proxy_group=♻️ 加坡自动`url-test`(新加坡|坡|狮城|SG|Singapore)`http://1.1.1.1`300,,20
-custom_proxy_group=♻️ 美国自动`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://1.1.1.1`300,,20
+custom_proxy_group=♻️ 香港自动`url-test`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.apple.com/library/test/success.html`300,,20
+custom_proxy_group=♻️ 日本自动`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.apple.com/library/test/success.html`300,,20
+custom_proxy_group=♻️ 加坡自动`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`300,,20
+custom_proxy_group=♻️ 美国自动`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.apple.com/library/test/success.html`300,,20
 
-custom_proxy_group=🔯 香港故转`fallback`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://1.1.1.1`60,,50
-custom_proxy_group=🔯 日本故转`fallback`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://1.1.1.1`60,,50
-custom_proxy_group=🔯 加坡故转`fallback`(新加坡|坡|狮城|SG|Singapore)`http://1.1.1.1`60,,50
-custom_proxy_group=🔯 美国故转`fallback`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://1.1.1.1`60,,50
+custom_proxy_group=🔯 香港故转`fallback`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.apple.com/library/test/success.html`60,,50
+custom_proxy_group=🔯 日本故转`fallback`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.apple.com/library/test/success.html`60,,50
+custom_proxy_group=🔯 加坡故转`fallback`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`60,,50
+custom_proxy_group=🔯 美国故转`fallback`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.apple.com/library/test/success.html`60,,50
 
-custom_proxy_group=🍃 香港均衡`load-balance`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://1.1.1.1`60,,10
-custom_proxy_group=🍃 日本均衡`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://1.1.1.1`60,,10
-custom_proxy_group=🍃 加坡均衡`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://1.1.1.1`60,,10
-custom_proxy_group=🍃 美国均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://1.1.1.1`60,,10
+custom_proxy_group=🍃 香港均衡`load-balance`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.apple.com/library/test/success.html`60,,10
+custom_proxy_group=🍃 日本均衡`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.apple.com/library/test/success.html`60,,10
+custom_proxy_group=🍃 加坡均衡`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`60,,10
+custom_proxy_group=🍃 美国均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.apple.com/library/test/success.html`60,,10
 
 ;启用自定义规则集
 
