--- a/black_config.ini
+++ b/black_config.ini
@@ -6,7 +6,7 @@
 ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ;不应该被去广告分流规则屏蔽的域名、IP
 ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.yaml
-;CNDNS
+;Acl-CnDns
 ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/ChinaDNS.yaml
 
 ;游戏下载直连
@@ -45,9 +45,9 @@ ruleset=🎶 Tiktok,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_r
 
 ;个人
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/Tjl2357954871/clash_rule_privacy@main/sub.list
-;PornAsia
+;Acl-PornAsia
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/PornAsia.yaml
-;Porn
+;Acl-Porn
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/Porn.yaml
 ;测速
 ruleset=🚀 节点选择,clash-classic:https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Speedtest/Speedtest.yaml
