--- a/clash-nodnsleak.ini
+++ b/clash-nodnsleak.ini
@@ -2,6 +2,7 @@
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Bing.list
 ruleset=REJECT,https://raw.githubusercontent.com/Tjl2357954871/clash_rule_privacy/refs/heads/main/tgban.list
 ruleset=DIRECT,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
